syntax = "proto3";
option go_package = "pb";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Message {
    Type type                   = 1;
    google.protobuf.Any payload = 2;
    int32 requestId             = 3; // optional
    bool isResponse             = 4; // optional

    enum Type {
        PING                   = 0;
        CHAT                   = 1;
        FOLLOW                 = 2;
        UNFOLLOW               = 3;
        OFFLINE_ACK            = 4;
        OFFLINE_RELAY          = 5;
        MODERATOR_ADD          = 6;
        MODERATOR_REMOVE       = 7;
        STORE                  = 8;
        BLOCK                  = 9;
        THREAD_INVITE          = 100;
        THREAD_EXTERNAL_INVITE = 101;
        THREAD_JOIN            = 102;
        THREAD_LEAVE           = 103;
        THREAD_DATA            = 104;
        THREAD_ANNOTATION      = 105;
        THREAD_IGNORE          = 200;
        THREAD_MERGE           = 201;
        THREAD_WELCOME         = 202;
        ERROR                  = 500;
    }
}

message Envelope {
    Message message = 1;
    bytes pk        = 2;
    bytes sig       = 3;
}

message Chat  {
    string id                      = 1;
    string subject                 = 2;
    google.protobuf.Timestamp date = 3;
    string message                 = 4;
    Flag flag                      = 5;

    enum Flag {
        MESSAGE = 0;
        TYPING  = 1;
        READ    = 2;
    }
}

message CidList {
    repeated string cids = 1;
}

message Block {
    bytes rawData = 1;
    string cid    = 2;
}

message Error {
    uint32 code    = 1;
    string message = 2;
}
